[PN][Joined Date issue, Shift issue resolved, pre-board page started]

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,9 @@
          focus:outline-none focus:ring-2 focus:ring-primary/40
          hover:border-primary;
 }
+
+html, body, #root {
+  height: auto;
+  min-height: 100%;
+  margin: 0;
+}
